--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,25 @@
 </head>
 <body>
 
-<%= yield %>
+<div class="container">
+	<p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
+
+
+	<% if user_signed_in? %>
+	<p>Welcome, <%= current_user.email %></p>
+		<%= link_to "logout", destroy_user_session_path, method: :delete %>
+
+	<% else %>
+		<%= link_to "sign-in", new_user_session_path %>
+		<%= link_to "sign-up", new_user_registration_path %>
+
+	<% end %>
+
+
+
+	<%= yield %>
+</div>
 
 </body>
 </html>
