updated 5 for checking to see if things work

--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -5,6 +5,11 @@ user: <%= @activity.activity %><br>
 
 email: <%= @email %><br>
 
+address: <%= @address %><br>
+
+ip_address: <%= @ip_address %><br>
+
+
 
 
 
