updated 6 for checking to see if things work

--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -10,6 +10,9 @@ address: <%= @address %><br>
 ip_address: <%= @ip_address %><br>
 
 
+ip_address search: <%= Geocoder.search("76.204.125.144") %><br>
+
+
 
 
 
