--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -1,16 +1,30 @@
 user: <%= @activity.activity %><br>
 
-
+address: <%= @activity.address %><br>
+lat: <%= @activity.latitude %><br>
+lon: <%= @activity.longitude %><br>
+place: <%= @activity.place %><br>
 
 
 email: <%= @email %><br>
 
-address: <%= @address %><br>
 
 ip_address: <%= @ip_address %><br>
 
 
 ip_address search: <%= Geocoder.search("76.204.125.144") %><br>
+
+
+
+<h3>Nearby Locations</h3>
+
+
+<ul>
+<% for location in @activity.nearbys(50) %>
+<li><%= link_to location.address, location %> (<%= location.distance %>)miles</li>
+
+<% end %>
+</ul>
 
 
 
