--- a/app/views/activities/new.html.erb
+++ b/app/views/activities/new.html.erb
@@ -2,7 +2,7 @@
 	<%= f.label :name, "Activity:" %>
 	<%= f.text_field :activity, placeholder: "Activity", class: "form-control" %>
 	<%= f.text_field :description, placeholder: "Description", class: "form-control" %>
-	<%= f.text_field :place, placeholder: "Place", class: "form-control" %>
+	<%= f.text_field :address, placeholder: "Address", class: "form-control" %>
 	<%= f.text_field :time, placeholder: "Time", class: "form-control" %>
 	<%= f.submit nil, class:"btn btn-primary", id:"submit" %>
 <% end %>
