can associate a user with an activity

--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -10,6 +10,8 @@ email: <%= @email %><br>
 
 ip_address: <%= @ip_address %><br>
 
+Activity id and User id == Current id: <%= @test_joining.activity_id %> and <%= @test_joining.user_id %>==<%= current_user.id %><br>
+
 
 ip_address search current location: <%= @s[0].address %><br>
 
