--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -1,3 +1,4 @@
+
 user: <%= @activity.activity %><br>
 
 address: <%= @activity.address %><br>
@@ -19,6 +20,7 @@ ip_address search distance: <%= @activity.distance_to(@s[0].address) %><br>
 
 <h3>New Group</h3>
 <%= @activity.users %><br>
+array.each { |x| puts x }
 
 
 With this submit I want to add a user to an activity
@@ -26,7 +28,10 @@ With this submit I want to add a user to an activity
 <form action="/activity_users" method="post">
 	<input type="hidden" name="activity" value="<%=@activity.id%>">
 	<input type="hidden" name="user" value="<%=@user.id%>">
-	<button id="submit">Join Activity</button>
+	<button class="btn btn-primary" id="submit">Join Activity</button>
+	<input name="authenticity_token" 
+                            type="hidden" 
+                            value="<%= form_authenticity_token %>" />
 
 </form>
 
@@ -41,6 +46,19 @@ With this submit I want to add a user to an activity
 
 <% end %>
 </ul>
+
+<div class="btn-group open">
+  <a class="btn btn-primary" href="#"><i class="fa fa-user fa-fw"></i> User</a>
+  <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#">
+    <span class="fa fa-caret-down"></span></a>
+  <ul class="dropdown-menu">
+    <li><a href="#"><i class="fa fa-pencil fa-fw"></i> Edit</a></li>
+    <li><a href="#"><i class="fa fa-trash-o fa-fw"></i> Delete</a></li>
+    <li><a href="#"><i class="fa fa-ban fa-fw"></i> Ban</a></li>
+    <li class="divider"></li>
+    <li><a href="#"><i class="i"></i> Make admin</a></li>
+  </ul>
+</div>
 
 
 
