--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -5,6 +5,12 @@
 <h1>You made it to INDEX activities, ya</h1>
 
 
+<%= link_to "Bike", pops_bike_path, {:class => "btn btn-primary"} %>
+<%= link_to "Run", pops_run_path, {:class => "btn btn-primary"} %>
+<%= link_to "Swimming", pops_swimming_path, {:class => "btn btn-primary"} %>
+<%= link_to "Racquetball", pops_racquetball_path, {:class => "btn btn-primary"} %>
+
+
 
 <table class="table table-striped table-hover">
 <tr>
