--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -5,13 +5,12 @@
 <h1>You made it to INDEX activities, ya</h1>
 
 
-<%= link_to "Bike", pops_bike_path, {:class => "btn btn-primary"} %>
-<%= link_to "Run", pops_run_path, {:class => "btn btn-primary"} %>
-<%= link_to "Swimming", pops_swimming_path, {:class => "btn btn-primary"} %>
-<%= link_to "Racquetball", pops_racquetball_path, {:class => "btn btn-primary"} %>
 
-
-
+<%= link_to "", pops_bike_path, {:class => "img-responsive row col-md-6 img-rounded col-md-* bike"} %>
+<%= link_to "", pops_run_path, {:class => "img-responsive row col-md-6 img-rounded col-md-* run"} %>
+<%= link_to "", pops_swimming_path, {:class => "img-responsive row col-md-6 img-rounded col-md-* swim"} %>
+<%= link_to "", pops_racquetball_path, {:class => "img-responsive row col-md-6 img-rounded  col-md-* racquetball"} %>
+<div class="table-responsive">
 <table class="table table-striped table-hover">
 <tr>
 	<td><h3>Activity</h3></td>
@@ -36,4 +35,4 @@
 
 <% end %>
 </table>
-
+</div>
