--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 
 	<% if user_signed_in? %>
 	<p>Welcome, <%= current_user.email %></p>
-		<%= link_to "logout", destroy_user_session_path, method: :delete %>
+		<%= link_to "logout", destroy_user_session_path, :method => :delete %>
 
 	<% else %>
 		<%= link_to "sign-in", new_user_session_path %>
