--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,23 +1,40 @@
-<h2>Sign up</h2>
+<div class="jumbotron sign_in">
+  <br>
+  <br>
+  <br>
+<h1>Welcome, sign up!</h1>
+    <p class="lead">
+      You must sign in or sign up before you can access our super sweet,
+      top secret content.
+    </p>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
-<div style="width:20em;">
-  <div class="input-group margin-bottom-sm">
-  <span class="input-group-addon"><i class="fa fa-envelope-o fa-fw"></i></span>
-  <%= f.email_field :email, placeholder: "Email address", :autofocus => true, class: "form-control" %>
-	</div>
+  <div style="width:20em;">
+    <div class="input-group margin-bottom-sm">
+    <%= f.email_field :email, placeholder: "Email address", :autofocus => true, class: "form-control" %>
+    </div>
 
-   <div class="input-group">
-  <span class="input-group-addon"><i class="fa fa-key fa-fw"></i></span>
-  <%= f.password_field :password, placeholder: "Password", class: "form-control" %></div>
+    <div class="input-group">
+    <%= f.password_field :password, placeholder: "Password", class: "form-control" %></div>
+  </div>
 
-   <div class="input-group">
-  <span class="input-group-addon"><i class="fa fa-key fa-fw"></i></span>
-  <%= f.password_field :password_confirmation, placeholder: "Password", class: "form-control" %></div>
-</div>
-
-  <div><%= f.submit "Sign up" %></div>
+     <div class="input-group">
+    <%= f.password_field :password_confirmation, placeholder: "Password", class: "form-control" %></div>
+    <div><%= f.submit "Sign up", :class => "btn btn-primary" %></div>
+    <%= render "devise/shared/links" %>
+  </div>
+  
 <% end %>
 
-<%= render "devise/shared/links" %>
+
+
+
+
+
+
+
+
+
+
+
