--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
 
 <ul class="nav nav-pills pull-right">
   <% if user_signed_in? %>
-    <li><%= button_to "Sign out", destroy_user_session_path, :method => :delete %></li>
+    <li><%= button_to "Sign out", destroy_user_session_path, :method => :delete, :class => "btn btn-link" %></li>
   <% else %>
     <li><%= link_to "Sign in", new_user_session_path %></li>
     <li><%= link_to "Sign up", new_user_registration_path %></li>
