--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,15 +1,17 @@
 
-
+<div class="container">
 
 
 <h1>You made it to INDEX activities, ya</h1>
-
-
 
 <%= link_to "", pops_bike_path, {:class => "img-responsive row col-md-6 img-rounded col-md-* bike"} %>
 <%= link_to "", pops_run_path, {:class => "img-responsive row col-md-6 img-rounded col-md-* run"} %>
 <%= link_to "", pops_swimming_path, {:class => "img-responsive row col-md-6 img-rounded col-md-* swim"} %>
 <%= link_to "", pops_racquetball_path, {:class => "img-responsive row col-md-6 img-rounded  col-md-* racquetball"} %>
+<div class="container">
+	<%= link_to "New Activity", new_activity_path, {:class => "btn btn-warning pull-right"} %>
+</div>
+
 <div class="table-responsive">
 <table class="table table-striped table-hover">
 <tr>
@@ -26,7 +28,7 @@
 <tr>
 	<td><%= to_do[0].activity %></td>
 	<td><%= to_do[0].users[0].email %></td>
-	<td><%= to_do[0].time.ctime %></td>
+	<td><%= to_do[0].time %></td>
 	<td><%= to_do[0].address %></td>
 	<td><%= to_do[0].description %></td>
 	<td><%= to_do[1].round(2) %></td>
@@ -35,4 +37,7 @@
 
 <% end %>
 </table>
+</div>
+
+
 </div>
