--- a/app/views/pops/bike.html.erb
+++ b/app/views/pops/bike.html.erb
@@ -1,4 +1,5 @@
-<h1>You made it to the Bikers Page, ya</h1>
+<div class="container jumbotron colorful">
+<h2>Bikers Page</h2>
 <%= link_to "Back", :back %>
 
 <table class="table table-striped table-hover">
@@ -27,3 +28,4 @@
 
 <% end %>
 </table>
+</div>
