css night commit 2

--- a/app/views/pops/run.html.erb
+++ b/app/views/pops/run.html.erb
@@ -1,5 +1,5 @@
-
-<h1>You made it to the Runners Page, ya</h1>
+<div class="container jumbotron colorful">
+<h1>Runners Page</h1>
 <%= link_to "Back", :back %>
 
 
@@ -30,3 +30,4 @@
 
 <% end %>
 </table>
+</div>
