--- a/app/views/pops/racquetball.html.erb
+++ b/app/views/pops/racquetball.html.erb
@@ -1,5 +1,5 @@
-
-<h1>You made it to the Racquetball Page, ya</h1>
+<div class="container jumbotron colorful">
+<h1>Racquetball Page</h1>
 <%= link_to "Back", :back %>
 
 
@@ -30,3 +30,4 @@
 
 <% end %>
 </table>
+</div>
