css night commit 4

--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -6,6 +6,7 @@
 <div class="row col-md-6 col-md-*">
 	<h3>Address:<small> <%= @activity.address %></small></h3><br>
 	<h3>Author:<small> <%= @activity.users[0].email %></small></h3><br>
+  <h4>Description:</h4><br>
   <p><%= @activity.description %></p><br>
 </div>
 
