--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 
 
 <ul class="nav nav-pills pull-left">
-    <li><h1 class="font_head">Active Now </h1></li>
+    <li><a class="tagging" href="/"><h1 class="font_head">Active Now </h1></a></li>
 </ul>
 <ul class="nav nav-pills pull-right">
   <% if user_signed_in? %>
